# Note-maker

./: README.md  pyproject.toml  sample_paper.txt  sample_questions.txt  test_workflow.py
src/paper_reader/: __init__.py  __main__.py  ai_provider.py  app.py  models.py  pdf_export.py  processing.py
src/paper_reader_desktop.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_processing.py
